# speechmesh

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/workflows/: build-artifacts.yml  release-artifacts.yml
app/: Cargo.toml
app/src/: main.rs
apps/ios-asr-demo/: README.md  project.yml
apps/ios-asr-demo/App/: ASRViewModel.swift  ContentView.swift  Info.plist  SpeechMeshASRDemoApp.swift  SpeechMeshWebSocketClient.swift
apps/ios-tts-demo/: project.yml
apps/ios-tts-demo/App/: ContentView.swift  SpeechMeshTTSDemoApp.swift  TTSPlaybackViewModel.swift
apps/ios-tts-demo/SpeechMeshTTSDemo.xcodeproj/: project.pbxproj
apps/ios-tts-demo/SpeechMeshTTSDemo.xcodeproj/xcshareddata/xcschemes/: SpeechMeshTTSDemo.xcscheme
apps/ios-tts-demo/web/: index.html
asr/: Cargo.toml  README.md
asr/interfaces/: README.md
asr/providers/apple/: README.md
asr/src/: lib.rs
bridges/: Cargo.toml
bridges/apple-asr/: Package.swift  README.md
bridges/apple-asr/Examples/: session-start.ndjson
bridges/apple-asr/Sources/AppleASRBridge/: main.swift
bridges/apple-pad-speaker/: Package.swift  README.md
bridges/apple-pad-speaker/Sources/: main.swift
bridges/src/: error.rs  lib.rs
bridges/src/asr/: composite.rs  minimax_http.rs  mock.rs  mod.rs  stdio.rs  tcp.rs
bridges/src/tts/: composite.rs  melo_http.rs  minimax_http.rs  mock.rs  mod.rs  qwen_http.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
deploy/: melotts-bridge.env.example  providers.catalog.example.json  providers.example.json
deploy/k8s/: speechmesh.yaml
deploy/linux/: speechmesh-device-agent-updater.service  speechmesh-device-agent-updater.timer  speechmesh-device-agent.service
deploy/macos/: io.speechmesh.apple-agent.plist  io.speechmesh.apple-bridge.plist  io.speechmesh.device-agent-updater.plist  io.speechmesh.device-agent.plist
device/: Cargo.toml
device/src/: lib.rs  model.rs  registry.rs  router.rs
docs/: README.md  android-device-agent.md  architecture.md  compatibility.md  deployment.md  melotts-local-serving.md  providers.md  release-handoff-2026-04.md  roadmap.md  sdk-guide.md  testing.md  tts-landscape.md  tts-websocket-design.md  websocket-protocol.md
examples/: README.md
examples/ws-asr-e2e/: Cargo.toml  README.md
examples/ws-asr-e2e/src/: main.rs
releases/: stable.json
scripts/: build_update_manifest.sh  deploy_k8s.sh  install_apple_agent_service.sh  install_apple_bridge_service.sh  install_device_agent_service.sh  install_termux_device_agent_service.sh  melotts_ws_bridge.py  prepare_asr_wav.sh  run_go_sdk_e2e.sh  run_melotts_ws_bridge.sh  run_ws_asr_e2e.sh  run_ws_tts_e2e.sh  test_melotts_ws_bridge.sh
sdks/: README.md
sdks/go/: README.md  client.go  client_test.go  go.mod  types.go
sdks/go/examples/stream_asr/: README.md  main.go
sdks/rust/: Cargo.toml  README.md  SPEECHMESH_CLI.md
sdks/rust/src/: lib.rs
sdks/rust/tests/: client_flow.rs
sdks/swift/: Package.swift  README.md
sdks/swift/Sources/SpeechMeshSwift/: Client.swift  MicrophoneStreamer.swift  Models.swift  README.swift  TTSSupport.swift
sdks/swift/Tests/SpeechMeshSwiftTests/: CodableTests.swift
speechmeshd/: Cargo.toml  README.md
speechmeshd/src/: agent.rs  asr_bridge.rs  bridge.rs  lib.rs  main.rs  providers.rs  server.rs  tts_bridge.rs
transport/: Cargo.toml  README.md
transport/http/: README.md
transport/src/: agent.rs  control.rs  lib.rs
transport/websocket/: README.md
tts/: Cargo.toml  README.md
tts/interfaces/: README.md
tts/providers/apple/: README.md
tts/src/: lib.rs
