[workspace]
resolver = "2"
members = [
  "core",
  "asr",
  "tts",
  "transport",
  "device",
  "bridges",
  "app",
  "speechmeshd",
  "sdks/rust",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "net", "sync", "process", "io-util", "time"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
clap = { version = "4.5.37", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
anyhow = "1.0.98"
base64 = "0.22.1"
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
