[package]
name = "speechmesh-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "speechmesh"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
ring = "0.17.14"
semver = "1.0.27"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
speechmesh-sdk = { path = "../sdks/rust" }
speechmeshd = { path = "../speechmeshd" }
