[package]
name = "speechmesh-bridges"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
speechmesh-asr = { path = "../asr" }
speechmesh-core = { path = "../core" }
speechmesh-transport = { path = "../transport" }
speechmesh-tts = { path = "../tts" }
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
