[package]
name = "speechmesh-device"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
speechmesh-core = { path = "../core" }
speechmesh-transport = { path = "../transport" }
