[package]
name = "speechmeshd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
speechmesh-asr = { path = "../asr" }
speechmesh-bridges = { path = "../bridges" }
speechmesh-core = { path = "../core" }
speechmesh-device = { path = "../device" }
speechmesh-transport = { path = "../transport" }
speechmesh-tts = { path = "../tts" }
thiserror.workspace = true
tokio.workspace = true
socket2 = "0.6"
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
