[package]
name = "speechmesh-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
futures-util.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
speechmesh-asr = { path = "../../asr" }
speechmesh-core = { path = "../../core" }
speechmesh-transport = { path = "../../transport" }
speechmesh-tts = { path = "../../tts" }
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
base64.workspace = true
speechmeshd = { path = "../../speechmeshd" }
tokio = { workspace = true, features = ["test-util"] }
